2006-07-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genAddrOf): fixed bug when offset on stack is >127

2006-07-06 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bitfields.c:
	  fixed bug [ 1518322 ] regression test bitfields fails on ppc hosts
	* support/regression/tests/constantRange.c:
	  fixed bug [ 1518317 ] regression test constantRange fails on alpha host

2006-07-04 Borut Razem <borut.razem AT siol.net>

	* src/configure.in, src/configure, src/Makefile.in, as/z80/Makefile.in,
	  src/port.mk,
	  src/avr/Makefile.in, src/ds390/Makefile.in, src/ds400/Makefile.in,
	  src/hc08/Makefile.in, src/mcs51/Makefile.in, src/pic16/Makefile.in,
	  src/pic/Makefile.in, src/xa51/Makefile.in, src/z80/Makefile.in:
	  reverted changes from 2006-07-03
	* Makefile.common.in: added @CPPFLAGS@ to CPPFLAGS
	* support/regression/Makefile.in, support/regression/ports/host/spec.mk:
	  added CPPFLAGS, used by the host port

2006-07-03 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/valdiag/tests/switch.c,
	* support/regression/valdiag/tests/constantRange.c: adapted to gcc 4
	* support/regression/tests/libmullong.c: fixed for host
	* support/regression/ports/host/spec.mk: disable all warnings for host,
	SDCC runs with --less-pedantic too

2006-07-03 Borut Razem <borut.razem AT siol.net>

	* src/configure.in, src/configure, src/Makefile.in, as/z80/Makefile.in:
	  defined CPPFLAGS
	* src/port.mk: defined CPPFLAGS, renamed to src/port.mk.in
	* src/avr/Makefile.in, src/ds390/Makefile.in, src/ds400/Makefile.in,
	  src/hc08/Makefile.in, src/mcs51/Makefile.in, src/pic16/Makefile.in,
	  src/pic/Makefile.in, src/xa51/Makefile.in, src/z80/Makefile.in:
	  include ../port.mk
	* sim/ucsim/main_in.mk, sim/ucsim/avr.src/Makefile.in,
	  sim/ucsim/gui.src/Makefile.in, sim/ucsim/hc08.src/Makefile.in,
	  sim/ucsim/s52.src/Makefile.in, sim/ucsim/sim.src/Makefile.in,
	  sim/ucsim/xa.src/Makefile.in: ignore header files for dependencies
