@@ -1,3 +1,8 @@
+2006-07-08 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/include/mcs51/XC866.h: added sbit definitions for Px_x, P1_x, P2_x
+	* src/pic16/glue.c (initPointer), fixed bug 1496419 for pic16
+
 2006-07-06 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/hc08/gen.c (genAddrOf): fixed bug when offset on stack is >127
